--- a/templates/index.html
+++ b/templates/index.html
@@ -1,1 +1,18 @@
-<h1>Awesome Sauce!</h1>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1">
+    <meta name="apple-mobile-web-app-capable" content="yes">
+
+    <title>Notesi</title>
+  </head>
+  <body>
+
+    <script src="../static/js/app/lib/lodash.underscore.js"></script>
+    <script src="../static/js/app/lib/jquery.js"></script>
+    <script src="../static/js/app/lib/backbone.js"></script>
+    <script src="../static/js/app/namespace.js"></script>
+    <script src="../static/js/app/models/note.js"></script>
+  </body>
